feat: release SDK v1.2.0 — World API sync, Python async, open-source docs
- Sync World OpenAPI (useMask, imagery, semanticsMetadata, lodMetaPath)
- Add Python async clients; Java core and asset improvements
- Add CHANGELOG.md and SECURITY.md; link from README

Co-authored-by: Cursor <cursoragent@cursor.com>