@@ -2,6 +2,7 @@ package com.manycoreapis.sdk.world;
 
 import com.manycoreapis.sdk.core.AholoClientConfig;
 import com.manycoreapis.sdk.core.AholoGatewayClient;
+import com.manycoreapis.sdk.core.EncodingSupport;
 import com.manycoreapis.sdk.core.PollSupport;
 import com.manycoreapis.sdk.world.model.WorldDetail;
 import com.manycoreapis.sdk.world.model.WorldListParams;
@@ -9,31 +10,33 @@ import com.manycoreapis.sdk.world.model.WorldPagedList;
 import com.manycoreapis.sdk.world.resources.GenerationsResource;
 import com.manycoreapis.sdk.world.resources.ReconstructionsResource;
 
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 /**
  * Aholo 3DGS world API client.
  *
+ * <p>Stainless-style resource access:
  * <pre>{@code
  * WorldClient world = WorldClient.create(AholoClientConfig.of("your_api_key", "com"));
- *
- * // Create a reconstruction job
  * WorldAsyncOperation op = world.reconstructions().create(
  *     ReconstructionCreateParams.builder()
  *         .addResource(url, "video")
  *         .taskQuality("normal")
  *         .scene("model")
  *         .build());
- *
- * // Poll until complete
+ * op = world.generations().create(GenerationCreateParams.builder().prompt("Modern living room").build());
+ * WorldDetail detail = world.retrieve(op.worldId());
+ * WorldPagedList page = world.list(WorldListParams.builder().pageNum(0).pageSize(20).build());
  * WorldDetail result = world.waitFor(op.worldId());
  * }</pre>
  */
 public class WorldClient {
-    private static final Set<String> TERMINAL_FAILURE = Set.of("FAILED", "CANCELED", "TIMEOUT", "REJECTED");
+    private static final Set<String> TERMINAL_FAILURE = Collections.unmodifiableSet(
+            new HashSet<String>(Arrays.asList("FAILED", "CANCELED", "TIMEOUT", "REJECTED")));
 
     private final AholoClientConfig config;
     private final AholoGatewayClient gateway;
@@ -61,7 +64,7 @@ public class WorldClient {
     /** GET /world/v1/{worldId} */
     public WorldDetail retrieve(String worldId) {
         return gateway.gatewayRequest("GET",
-                worldPathPrefix(config) + "/" + URLEncoder.encode(worldId, StandardCharsets.UTF_8),
+                worldPathPrefix(config) + "/" + EncodingSupport.urlEncode(worldId),
                 null, null, null, WorldDetail.class);
     }
 
@@ -86,4 +89,5 @@ public class WorldClient {
     private static String worldPathPrefix(AholoClientConfig config) {
         return config.region() == AholoClientConfig.Region.COM ? "/global/world/v1" : "/world/v1";
     }
+
 }
